@@ -66,13 +66,21 @@ These will be applied when the user first switches to your skin, or when they re
 
 You can set what value should be used for all shortcuts in a given group, if the user hasn't selected an alternative value:-
 
-`<propertyfallback group="[GroupName]"" property="[Property]">[Property Value]</propertyfallback>`
+`<propertyfallback group="[GroupName]"" property="[Property]" attribute="[Attribute]" value="[Value]">[Property Value]</propertyfallback>`
 
 | Property | Optional | Description |
 | :------: | :------: | ----------- |
 | `[GroupName]` | Yes | The group that the labelID must be in, for example "movies". If omitted, the property will be apply to items in the main menu. |
 | `[Property]` | | The property of the shortcut that will be set |
+| `[Attribute]` | Yes | If property is conditional, the attribute that will be matched against |
+| `[Value]` | Yes | If property is conditional, the value that the attribute specified must have |
 | `[Property Value]` | | The default value of the property |
+
+You can include multiple `<propertyfallback />` elements for a specific property. The property will be set to the first one matched.
+
+When using conditions, both the [Attribute] and [Value] must be specified. So, if you wanted to match the fallback to a shortcut with the attribute 'widgetType' set to the value 'movies':-
+
+`<propertyfallback property="customProperty" attribute="widgetType" value="movies">Fallback Value</propertyfallback>`
 
 Note:- This will be applied to all shortcuts when the menu is built, and will show in the management dialog, but the fallback property will not be saved as part of the skins .properties file.
 
